retail-media/v2027.01-rc/docs/revenue-report-ssp.mdx
---
title: Revenue Report
original_file: to-migrate/criteo-dev-portal-full-export/merged_export/Retail_Media/v2026_01/docs/Guides for Retail Media API/supply-side-reporting-ssp/revenue-report-ssp.md
description: Supply Side Revenue Report (v2)
---


import { EndpointBadge } from "/snippets/EndpointBadge.jsx";

## Introduction

The revenue report serves as a vital tool for supply account owners, such as retailers, enabling them to understand the origins of their retail media revenue. It offers comprehensive visibility across all advertisers, media platforms, and sales channels, encompassing direct, indirect, and private market avenues.

This report delves into crucial aspects, including generated revenue, delivered impressions, clicks, average rates, and overall performance metrics. Through this API only, supply partners gain the ability to construct detailed reports by accessing several metrics and dimensions.

***

## Default Settings

When a retailer wants to view their default settings (as used in the user interface), we suggest constructing their API request or data call using the same default parameters as in the UI.

For Onsite Sponsored Products:

* `clickAttributionWindow`: 30D
* `clickMatchLevel`: `sameCategory`
* `viewAttributionWindow`: 1D
* `viewMatchLevel`: `sameSku`

For Onsite Display:

* `clickAttributionWindow`: 14D
* `clickMatchLevel`: `sameCategory`
* `viewAttributionWindow`: 14D
* `viewMatchLevel`: `sameCategory`

<Note>
  For more information on the report, please visit the [Criteo Help Center.](https://help.retailmedia.criteo.com/kb/guide/en/supply-side-dashboard-kAQBtSzLkH/Steps/3155149)
</Note>

***

## Endpoints

The report generation uses an **asynchronous endpoint** that is used to receive the report creation request (using a `POST` request). Then, using the report `id` generated, it's possible to check the report status and to download the output results using the following `GET` endpoint requests.

<table>
 <thead>
  <tr>
   <th>
    <p>
     Verb
    </p>
   </th>
   <th>
    <p>
     Endpoint
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     <b>
      POST
     </b>
    </p>
   </td>
   <td>
    <p>
     <code>
      /reports/revenue
     </code>
    </p>
   </td>
   <td>
    <p>
     Request a retailer revenue report creation
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <b>
      GET
     </b>
    </p>
   </td>
   <td>
    <p>
     <code>
      /reports/&#123;reportId&#125;/status
     </code>
    </p>
   </td>
   <td>
    <p>
     Get status of a specific report
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <b>
      GET
     </b>
    </p>
   </td>
   <td>
    <p>
     <code>
      /reports/&#123;reportId&#125;/output
     </code>
    </p>
   </td>
   <td>
    <p>
     Download output of a specific report
    </p>
   </td>
  </tr>
 </tbody>
</table>

***

## Attributes

<table>
 <thead>
  <tr>
   <th>
    <p>
     Attribute
    </p>
   </th>
   <th>
    <p>
     Data Type
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     <code>
      id
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     Supply Account ID to pull results for
    </p>
    <p>
     Note: for apps with access to multiple supply accounts, it is also possible to use an
     <code>
      ids
     </code>
     array for multiple IDs, allowing to pull results across multiple accounts. e.g.
    </p>
    <p>
     <code>
      "ids":["supplyAccountId_1","supplyAccountId_2"]
     </code>
    </p>
    <p>
     Accepted values:
     <code>
      int64
     </code>
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      reportType
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     Report types are pre-packaged reports that allow the specification of the report breakdown. They enable reports to view revenue distribution by advertiser, brand, environment, page category, and page type. The metrics and dimensions in these report types are limited.
    </p>
    <p>
     Use the
     <code>
      metrics
     </code>
     and
     <code>
      dimensions
     </code>
     arrays to build your report for additional fields.
    </p>
    <p>
     _Note: when metrics and dimensions are used, the report type is ignored._
    </p>
    <p>
     Accepted values:
     <code>
      advertiser
     </code>
     ,
     <code>
      brand
     </code>
     ,
     <code>
      environment
     </code>
     ,
     <code>
      productCategory
     </code>
     ,
     <code>
      pageType
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      revenueType
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The revenue type used to filter report results.
    </p>
    <p>
     If the revenue type filter is not specified, the report will return all existing revenue data for sponsored products and preferred deals within the specified timeframe.
    </p>
    <p>
     Accepted values:
     <code>
      auction
     </code>
     ,
     <code>
      preferred
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      soldBy
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The sales channel of indirect sold, direct sold, or private market. This is an optional filter that can be used to narrow down results.
    </p>
    <p>
     Accepted values:
     <code>
      directSold
     </code>
     ,
     <code>
      indirectSold
     </code>
     ,
     <code>
      privateMarket
     </code>
     ,
     <code>
      authorizedBuyer
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      budgetModels
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      array
     </code>
    </p>
   </td>
   <td>
    <p>
     Filter on the budget model. Optional.
    </p>
    <p>
     Accepted values:
     <code>
      CriteoBudget
     </code>
     ,
     <code>
      RetailerBudget
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      activationPlatforms
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      array
     </code>
    </p>
   </td>
   <td>
    <p>
     Filter on the activation platform. Optional.
    </p>
    <p>
     Accepted values:
     <code>
      CommerceMax
     </code>
     ,
     <code>
      PrivateMarket
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      buyType
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The campaign buying strategy. This optional filter can be used to filter down results
    </p>
    <p>
     Accepted values:
     <code>
      auction
     </code>
     ,
     <code>
      preferredDeals
     </code>
     ,
     <code>
      sponsorship
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      format
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The format type the report should return results
    </p>
    <p>
     Accepted values:
     <code>
      json
     </code>
     ,
     <code>
      json-compact
     </code>
     ,
     <code>
      json-newline
     </code>
     ,
     <code>
      csv
     </code>
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignType
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The campaign type to filter results
    </p>
    <p>
     Accepted values:
     <code>
      all
     </code>
     ,
     <code>
      sponsoredProducts
     </code>
     ,
     <code>
      onSiteDisplays
     </code>
    </p>
    <p>
     Default:
     <code>
      all
     </code>
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      salesChannel
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The sales channel where attributed sales originated
    </p>
    <p>
     Accepted values:
     <code>
      all
     </code>
     ,
     <code>
      online
     </code>
     ,
     <code>
      offline
     </code>
    </p>
    <p>
     Default:
     <code>
      all
     </code>
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      advertiserTypes
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      list
     </code>
    </p>
   </td>
   <td>
    <p>
     The advertiser type where campaigns originated from
    </p>
    <p>
     Accepted values:
     <code>
      retailer
     </code>
     ,
     <code>
      brand
     </code>
     ,
     <code>
      seller
     </code>
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      clickAttributionWindow
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The post-click attribution window, defined as the maximum number of days considered between a click and a conversion for attribution; conversions are attributed to the date of conversion, not the date of click.
    </p>
    <p>
     Accepted values:
     <code>
      none
     </code>
     ,
     <code>
      7D
     </code>
     ,
     <code>
      14D
     </code>
     ,
     <code>
      30D
     </code>
    </p>
    <p>
     Default: if omitted, defaults to
     <a href="/retail-media/docs/campaigns-endpoints">
      Campaign
     </a>
     settings; must be specified if
     <code>
      viewAttributionWindow
     </code>
     is one of the accepted values
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      viewAttributionWindow
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      enum
     </code>
    </p>
   </td>
   <td>
    <p>
     The post-view attribution window, defined as the maximum number of days considered between an impression and a conversion for attribution; conversions are attributed to the date of conversion, not the date of impression.
    </p>
    <p>
     Accepted values:
     <code>
      none
     </code>
     ,
     <code>
      1D
     </code>
     ,
     <code>
      7D
     </code>
     ,
     <code>
      14D
     </code>
     ,
     <code>
      30D
     </code>
    </p>
    <p>
     Default: if omitted, defaults to
     <a href="/retail-media/docs/campaigns-endpoints">
      Campaign
     </a>
     settings; must be less than or equal to
     <code>
      clickAttributionWindow
     </code>
     ; must be specified if
     <code>
      clickAttributionWindow
     </code>
     is one of the accepted values
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      dimensions
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      list
     </code>
    </p>
   </td>
   <td>
    <p>
     An array of strings used to define which dimensions to see in the report
    </p>
    <p>
     Accepted values: refer to
     <a href="/retail-media/docs/metrics-and-dimensions-ssp">
      Metrics and Dimensions
     </a>
     for the complete list of supported dimensions
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      clickMatchLevel
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The attribution configuration modal allows users to retrieve data based on the specified product match for click events.
    </p>
    <p>
     The order of product match relationships from farthest to closest is
     <code>
      sameBrand
     </code>
     \&lt;
     <code>
      sameCategory
     </code>
     \&lt;
     <code>
      sameSku
     </code>
     . The
     <code>
      sameBrand
     </code>
     product match value is inclusive of
     <code>
      sameCategory
     </code>
     and
     <code>
      sameSku
     </code>
     attribution. The
     <code>
      sameCategory
     </code>
     value is inclusive of
     <code>
      sameSku
     </code>
     attribution.
     <b>
      Only one value should be used.
     </b>
    </p>
    <p>
     _This is not a filter that excludes events. Rather, it calculates attribution using the provided SKU match level._
    </p>
    <p>
     Accepted values:
     <code>
      sameSku
     </code>
     ,
     <code>
      sameCategory
     </code>
     ,
     <code>
      sameBrand
     </code>
     ,
     <code>
      campaign
     </code>
    </p>
    <p>
     Default: if omitted, defaults to
     <a href="/retail-media/docs/campaigns-endpoints">
      Campaign
     </a>
     settings
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      viewMatchLevel
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The attribution configuration modal allows users to retrieve data based on the specified product match for view events.
    </p>
    <p>
     The order of product match relationships from farthest to closest is
     <code>
      sameBrand
     </code>
     \&lt;
     <code>
      sameCategory
     </code>
     \&lt;
     <code>
      sameSku
     </code>
     . The
     <code>
      sameBrand
     </code>
     product match value is inclusive of
     <code>
      sameCategory
     </code>
     and
     <code>
      sameSku
     </code>
     attribution. The
     <code>
      sameCategory
     </code>
     value is inclusive of
     <code>
      sameSku
     </code>
     attribution.
     <b>
      Only one value should be used.
     </b>
    </p>
    <p>
     _This is not a filter that excludes events. Rather, it calculates attribution using the provided SKU match level._
    </p>
    <p>
     Accepted values:
     <code>
      sameSku
     </code>
     ,
     <code>
      sameCategory
     </code>
     ,
     <code>
      sameBrand
     </code>
     ,
     <code>
      campaign
     </code>
    </p>
    <p>
     Default: if omitted, defaults to
     <a href="/retail-media/docs/campaigns-endpoints">
      Campaign
     </a>
     settings
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      skuRelations
     </code>
    </p>
    <p>
     (DEPRECATED)
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     The attributed rule used to match an impression/click to a sale. The filter will narrow down results of the attributed rules set by the advertiser at the campaign level.
    </p>
    <p>
     Accepted Values:
     <code>
      sameSku
     </code>
     ,
     <code>
      sameParentSku
     </code>
     ,
     <code>
      sameCategory
     </code>
     ,
     <code>
      sameBrand
     </code>
     ,
     <code>
      sameSeller
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
    <p>
     ⚠️
     <b>
      Note
     </b>
     : This filter is
     <b>
      deprecated
     </b>
     . Please use
     <code>
      clickMatchLevel
     </code>
     and
     <code>
      viewMatchLevel
     </code>
     instead. However, the
     <code>
      skuRelations
     </code>
     dimension can still be used.
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      metrics
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      list
     </code>
    </p>
   </td>
   <td>
    <p>
     An array of strings used to define which metrics to see in the report.
    </p>
    <p>
     Accepted values: refer to
     <a href="/retail-media/docs/metrics-and-dimensions-ssp">
      Metrics and Dimensions
     </a>
     for the complete list of supported metrics
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      startDate
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      timestamp
     </code>
    </p>
   </td>
   <td>
    <p>
     Start date of the report (inclusive)
    </p>
    <p>
     Accepted values:
     <code>
      yyyy-mm-ddThh:mm:ss
     </code>
     (in
     <a href="https://en.wikipedia.org/wiki/ISO_8601">
      ISO-8601
     </a>
     )
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      endDate
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      timestamp
     </code>
    </p>
   </td>
   <td>
    <p>
     End date of the report (inclusive)
    </p>
    <p>
     Accepted values:
     <code>
      yyyy-mm-ddThh:mm:ss
     </code>
     (in
     <a href="https://en.wikipedia.org/wiki/ISO_8601">
      ISO-8601
     </a>
     )
    </p>
    <p>
     Writable? N / Nullable? N
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      timezone
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     Time zone to consider in the metrics calculation,
     <code>
      startDate
     </code>
     and
     <code>
      endDate
     </code>
    </p>
    <p>
     Accepted values:
     <a href="https://www.iana.org/time-zones">
      IANA (TZ database)
     </a>
     time zones (example:
     <code>
      America/New_York
     </code>
     ,
     <code>
      Europe/Paris
     </code>
     ,
     <code>
      Asia/Tokyo
     </code>
     ,
     <code>
      UTC
     </code>
     )
    </p>
    <p>
     Default:
     <code>
      UTC
     </code>
    </p>
    <p>
     Writable? N / Nullable? Y
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      accountIds
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     Gives the ability for the user to filter by account IDs.
    </p>
    <p>
     _There are currently no limitations to the amount of IDs that can be added to the filter._
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      campaignIds
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     Gives the ability for the user to filter by campaign IDs.
    </p>
    <p>
     _There are currently no limitations to the amount of IDs that can be added to the filter._
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      lineItemIds
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     Gives the ability for the user to filter by line item IDs.
    </p>
    <p>
     _There are currently no limitations to the amount of IDs that can be added to the filter._
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     <code>
      retailerIds
     </code>
    </p>
   </td>
   <td>
    <p>
     <code>
      string
     </code>
    </p>
   </td>
   <td>
    <p>
     Gives the ability for the user to filter their reporting by retailer ID(s).
    </p>
   </td>
  </tr>
 </tbody>
</table>

<Info>
  **Metrics and Dimensions**

  For a complete list of all supported metrics and dimension, check out the [Metrics and Dimensions](/retail-media/v2027.01-rc/docs/metrics-and-dimensions-ssp)
</Info>

<Info>
  When utilizing the `clickMatchLevel` and `viewMatchLevel` fields, we recommend including the `attributionSettings`, `activityType`, and `skuRelation`. This will assist in gaining a clearer understanding of the click and view events, categorized by their attribution windows and SKU relationships.
</Info>

***

## Generate Revenue Report

<EndpointBadge method="post">
```http
https://api.criteo.com/{version}/retail-media/reports/revenue
```
</EndpointBadge>

### Sample Request

```bash curl expandable
curl -L 'https://api.criteo.com/{version}/retail-media/reports/revenue' \
-H 'Content-Type: application/json' \
-H 'Accept: application/json' \
-H 'Authorization: Bearer <MY_ACCESS_TOKEN>' \
-d '{
  "data": {
        "type": "SSPRevenueReport",
        "attributes": {
          "id": "203209148566716416",
          "revenueType": "auction",
          "soldBy": "directSold",
          "buyType": "auction",
          "skuRelations": [
            "sameSku"
          ],
          "format": "json",
          "campaignType": "sponsoredProducts",
          "salesChannel": "online",
          "clickAttributionWindow": "7D",
          "viewAttributionWindow": "1D",
          "clickMatchLevel": "sameCategory",
          "viewMatchLevel": "sameSKU",
					"dimensions": [
              "date",
              "hour",
              "advertiserType",
              "accountName",
              "campaignName",
              "activityType",
              "advProductId",
              "advProductName",
              "placementName",
              "taxonomy1Name",
              "taxonomy2Name",
              "taxonomy3Name"      
          ],
          "metrics": [
              "numberOfCampaigns",
              "numberOfSkus",
              "clicks",
              "units",
              "ctr",
              "cr",
              "workingMedia",
              "netRevenue"
          ],
          "startDate": "2024-04-10T21:14:53.816Z",
          "endDate": "2024-04-10T21:14:53.816Z",
          "timezone": "UTC"
     	 }
    }
  }
}'
```

### Sample Response

```json JSON
{
    "data": {
        "type": "RetailMediaReportStatus",
        "id": "22fa642d-ab8a-463c-a2f6-fb174c2f72dd",
        "attributes": {
            "status": "pending",
            "rowCount": null,
            "fileSizeBytes": null,
            "md5Checksum": null,
            "createdAt": null,
            "expiresAt": null,
            "message": null
        }
    }
}
```

***

## Get status of specific report

<EndpointBadge method="get">
```http
https://api.criteo.com/{version}/retail-media/reports/{reportId}/status
```
</EndpointBadge>

### Sample Request

```bash CURL
curl -L 'https://api.criteo.com/{version}/retail-media/reports/22fa642d-ab8a-463c-a2f6-fb174c2f72dd/status' \
-H 'Accept: application/json' \
-H 'Authorization: Bearer <MY_ACCESS_TOKEN>'
```

### Sample Response

```json
{
    "data": {
        "type": "RetailMediaReportStatus",
        "id": "22fa642d-ab8a-463c-a2f6-fb174c2f72dd",
        "attributes": {
            "status": "success",
            "rowCount": 2,
            "fileSizeBytes": 341,
            "md5Checksum": "f43cf2503a31a100f7b81db3c14d3fae",
            "createdAt": "2023-07-10T16:00:32.000Z",
            "expiresAt": "2023-07-17T16:00:32.000Z",
            "message": null
        }
    }
}
```

***

## Download Output of a Specific Report

<EndpointBadge method="get">
```http
https://api.criteo.com/{version}/retail-media/reports/{reportId}/output
```
</EndpointBadge>

### Sample Request

```bash
curl -X GET "https://api.criteo.com/{version}/retail-media/reports/2e733b8c-9983-4237-aab9-17a42f426xx/output" \
    -H "Authorization: Bearer <MY_ACCESS_TOKEN>"
```

### Sample Responses

_Report broken down by advertiser by JSON format_

```json expandable
[
    {
        "date": "2024-04-10",
        "hour": 15,
        "advertiserType":"seller",
        "accountName": "Account A",
        "campaignName": "CampaignABC",
        "placementName": "viewSearchResult",
        "activityType": "imp",
        "advProductId": "14364409",
        "advProductName": "360 Deluxe (PC/Mac) - 5 Devices",
        "taxonomy1Name": "computers & tablets",
        "taxonomy2Name": "software",
        "taxonomy3Name": "antivirus, security & utility software",
        "numberOfCampaigns": 1,
        "numberOfSkus": 1,
        "clicks": 0,
        "units": 1,
        "ctr": null,
        "cr": null,
        "workingMedia": 0,
        "netRevenue": 0
    },
    {
        "date": "2024-04-10",
        "hour": 11,
        "advertiserType":"brand",
        "accountName": "Account A",
        "campaignName": "CampaignXYZ",
        "placementName": "viewSearchResult",
        "activityType": "click",
        "advProductId": "15325425",
        "advProductName": "Mini On-Ear Bluetooth Kids Headphones - Pink",
        "taxonomy1Name": "audio",
        "taxonomy2Name": "headphones",
        "taxonomy3Name": "over-ear headphones",
        "numberOfCampaigns": 1,
        "numberOfSkus": 1,
        "clicks": 0,
        "units": 1,
        "ctr": null,
        "cr": null,
        "workingMedia": 0,
        "netRevenue": 0
    },
    {
        "date": "2024-04-10",
        "hour": 10,
        "advertiserType":"seller",
        "accountName": "Account B",
        "campaignName": "CampaignDEF",
        "placementName": "viewItem_API",
        "activityType": "imp",
        "advProductId": "17701444",
        "advProductName": "City Pro Electric Scooter",
        "taxonomy1Name": "sports, recreation & transportation",
        "taxonomy2Name": "electric transportation",
        "taxonomy3Name": "electric scooters",
        "numberOfCampaigns": 1,
        "numberOfSkus": 1,
        "clicks": 0,
        "units": 1,
        "ctr": null,
        "cr": null,
        "workingMedia": 0,
        "netRevenue": 0
    }
]
```

***

## Responses

<table>
 <thead>
  <tr>
   <th>
    <p>
     Response
    </p>
   </th>
   <th>
    <p>
     Description
    </p>
   </th>
  </tr>
 </thead>
 <tbody>
  <tr>
   <td>
    <p>
     🔵
     <code>
      200
     </code>
    </p>
   </td>
   <td>
    <p>
     Call executed with success
    </p>
   </td>
  </tr>
  <tr>
   <td>
    <p>
     🔴
     <code>
      400
     </code>
    </p>
   </td>
   <td>
    <p>
     Common Validation Errors:
    </p>
    <ul>
     <li>
      <b>
       <code>
        endDate
       </code>
       cannot be more than 100 days from
       <code>
        startDate
       </code>
      </b>
      - Using a date range with more than 100 days apart
     </li>
     <li>
      <b>
       <code>
        reportType
       </code>
       invalid
      </b>
      - calling an unsupported report type will throw a 400 error
     </li>
     <li>
      <b>
       <code>
        timeZone
       </code>
       must be a valid timezone
      </b>
      - using a time zone value that is not listed in the list tz database time zones
     </li>
     <li>
      <b>
       format invalid
      </b>
      - using an unsupported file format
     </li>
    </ul>
   </td>
  </tr>
 </tbody>
</table>

***

<br />


## What's next

* [Metrics and Dimensions (SSP)](/retail-media/v2027.01-rc/docs/metrics-and-dimensions-ssp)
